--- a/Итоги первого блока.csproj
+++ b/Итоги первого блока.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Итоги_первого_блока</RootNamespace>
+    <RootNamespace>First_Block_Summary</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
